--- a/assets/style.css
+++ b/assets/style.css
@@ -3,5 +3,8 @@ h1 {
 }
 
 .image {
-    text-align: center;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
 }
