--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,7 @@
+body {
+    background: url(assets/images/space.jfif);
+}    
+
 h1 {
     text-align: center;
 }
@@ -7,4 +11,11 @@ h1 {
     margin-left: auto;
     margin-right: auto;
     width: 50%;
+    border-radius: 50%;
 }
+
+.button {
+    text-align: center;
+    padding-bottom: 2rem;
+}
+
