--- a/assets/style.css
+++ b/assets/style.css
@@ -1,8 +1,15 @@
+body {
+    background-image: url(images/space.jpg);
+    background-size: cover;
+}
+
 h1 {
     text-align: center;
+    color: white;
 }
 #time {
     text-align: center;
+    color: white;
 }
 .image {
     display: block;
