--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,8 @@
 body {
-    background-image: url(images/space.jpg);
+    background: url(images/space.jpg) no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
     background-size: cover;
 }
 
@@ -21,5 +24,8 @@ h1 {
 .button {
     text-align: center;
     padding-bottom: 2rem;
+}
+.planetImage {
+    border-radius: 1vw;
 }
 
