--- a/assets/style.css
+++ b/assets/style.css
@@ -50,3 +50,24 @@ td {
 #wrapCarousel {
     text-align: center;
 }
+
+#leftdata {
+    text-align: center;
+    color: white;
+    
+}
+
+#rightdata {
+    text-align: center;
+    color: white;
+    
+}
+
+#carousel {
+    text-align: center;
+    color: white;
+    
+}
+
+
+
