updates to rows and css

--- a/assets/style.css
+++ b/assets/style.css
@@ -69,5 +69,15 @@ td {
     
 }
 
+#wrapInput {
+    padding-left: 45%;
+    padding-right: 45%;
+    
+}
+
+.button {
+    padding-top: 1rem;
+}
+
 
 
