--- a/assets/style.css
+++ b/assets/style.css
@@ -21,7 +21,7 @@ h1 {
     margin-left: auto;
     margin-right: auto;
     width: 50%;
-    border-radius: 50%;
+    border-radius: 80%;
 }
 .button {
     text-align: center;
@@ -62,6 +62,16 @@ td {
 #rightdata {
     text-align: center;
     color: white;
+}
+
+#planetGif {
+    box-shadow: 0 0 40px 3px white inset;
+    border-radius: 50%;
+    
+}
+
+img {
+    border-radius: 100%;
 }
 
 .button {
