update css and html and js for compare planets

--- a/assets/style.css
+++ b/assets/style.css
@@ -10,6 +10,7 @@ h1 {
     text-align: center;
     color: white;
 }
+
 #time {
     text-align: center;
     color: white;
@@ -60,6 +61,11 @@ td {
 }
 
 #rightdata {
+    text-align: center;
+    color: white;
+}
+
+.data {
     text-align: center;
     color: white;
 }
