--- a/assets/style.css
+++ b/assets/style.css
@@ -9,11 +9,14 @@ body {
 h1 {
     text-align: center;
     color: white;
+    font-size: 4rem;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
 #time {
     text-align: center;
     color: white;
+    font-size: 2rem;
 }
 
 /* Styling for carousel */
@@ -62,14 +65,22 @@ td {
 }
 
 #leftdata {
-    text-align: center;
+    text-align: left;
     color: white;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+    font-size: 1.5rem;
+    
 }
 
 #rightdata {
-    text-align: center;
+    text-align: left;
     color: white;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+    font-size: 1.5rem;
+    
 }
+
+
 
 .data {
     text-align: center;
@@ -110,6 +121,7 @@ td {
 .textFormat {
     text-align: left;
     color: white;
+    font-size: 1.5rem;
     
 }
 
