--- a/assets/style.css
+++ b/assets/style.css
@@ -19,6 +19,11 @@ h1 {
     font-size: 2rem;
 }
 
+#mdImg {
+    height: 200px;
+    width: 300px;
+}
+
 /* Styling for carousel */
 .image {
     display: block;
